--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+<!DOCTYPE HTML>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <title>Double Exposure Gallery</title>
+	 <link rel="stylesheet" href="style.css">
