--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@
      <meta charset="UTF-8">
      <title>Double Exposure Gallery</title>
 	 <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
+    <br><br><br><br><br>
+<p id="loading">loading...</p>
