--- a/index.html
+++ b/index.html
@@ -8,3 +8,7 @@
  <body>
     <br><br><br><br><br>
 <p id="loading">loading...</p>
+<div id="images">
+  <div class="lighten">
+    <img src="images/lighten1.jpg" alt="1" />
+    <img src="images/lighten3.jpg" alt="2" />
