--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@
   <div class="lighten">
     <img src="images/lighten1.jpg" alt="1" />
     <img src="images/lighten3.jpg" alt="2" />
+<img src="images/lighten1.jpg" alt="3" />
+    <img src="images/lighten4.jpg" alt="4" />
+  </div>
