--- a/index.html
+++ b/index.html
@@ -15,3 +15,6 @@
 <img src="images/lighten1.jpg" alt="3" />
     <img src="images/lighten4.jpg" alt="4" />
   </div>
+<div class="normal">
+    <img src="images/1.jpg" alt="1" />
+    <img src="images/2.jpg" alt="2" />
