--- a/index.html
+++ b/index.html
@@ -18,3 +18,6 @@
 <div class="normal">
     <img src="images/1.jpg" alt="1" />
     <img src="images/2.jpg" alt="2" />
+<img src="images/4.jpg" alt="3" />
+    <img src="images/3.jpg" alt="4" />
+  </div>
