--- a/index.html
+++ b/index.html
@@ -21,3 +21,9 @@
 <img src="images/4.jpg" alt="3" />
     <img src="images/3.jpg" alt="4" />
   </div>
+<nav>
+    <ul>
+      <li class="pre"></li>
+      <li class="next"></li>
+    </ul>
+  </nav>
