--- a/index.html
+++ b/index.html
@@ -35,3 +35,10 @@ function _classCallCheck(instance, Constructor) { if (!(instance instanceof Cons
 window.onload = function () {
   var loading = document.getElementById("loading");
   loading.classList.add("loading-done");
+var property = {
+    element: "#images",
+    parallax: .6,
+    interval: 2200,
+    animDuration: 1300,
+    easing: easingInOutQuad
+  };
