--- a/index.html
+++ b/index.html
@@ -42,3 +42,6 @@ var property = {
     animDuration: 1300,
     easing: easingInOutQuad
   };
+ var slider = new DXslider(property);
+  slider.init();
+};
