--- a/index.html
+++ b/index.html
@@ -45,3 +45,6 @@ var property = {
  var slider = new DXslider(property);
   slider.init();
 };
+var DXslider = function () {
+  function DXslider(property) {
+    _classCallCheck(this, DXslider);
