--- a/index.html
+++ b/index.html
@@ -48,3 +48,5 @@ var property = {
 var DXslider = function () {
   function DXslider(property) {
     _classCallCheck(this, DXslider);
+this.images = document.querySelector(property.element);
+    this.preButton = document.querySelector(property.element + " nav .pre");
