--- a/index.html
+++ b/index.html
@@ -50,3 +50,5 @@ var DXslider = function () {
     _classCallCheck(this, DXslider);
 this.images = document.querySelector(property.element);
     this.preButton = document.querySelector(property.element + " nav .pre");
+this.nextButton = document.querySelector(property.element + " nav .next");
+    this.lightenImages = document.querySelectorAll(".lighten img");
