--- a/index.html
+++ b/index.html
@@ -52,3 +52,5 @@ this.images = document.querySelector(property.element);
     this.preButton = document.querySelector(property.element + " nav .pre");
 this.nextButton = document.querySelector(property.element + " nav .next");
     this.lightenImages = document.querySelectorAll(".lighten img");
+this.normalImages = document.querySelectorAll(".normal img");
+    this.canvasBox = document.createElement("div");
