--- a/index.html
+++ b/index.html
@@ -54,3 +54,5 @@ this.nextButton = document.querySelector(property.element + " nav .next");
     this.lightenImages = document.querySelectorAll(".lighten img");
 this.normalImages = document.querySelectorAll(".normal img");
     this.canvasBox = document.createElement("div");
+this.paraEffect = property.parallax; //have to clamp 0 ~ 1
+    this.canvasArray = [];
