--- a/index.html
+++ b/index.html
@@ -56,3 +56,5 @@ this.normalImages = document.querySelectorAll(".normal img");
     this.canvasBox = document.createElement("div");
 this.paraEffect = property.parallax; //have to clamp 0 ~ 1
     this.canvasArray = [];
+this.progress = 0;
+    this.animating = false;
