--- a/index.html
+++ b/index.html
@@ -58,3 +58,5 @@ this.paraEffect = property.parallax; //have to clamp 0 ~ 1
     this.canvasArray = [];
 this.progress = 0;
     this.animating = false;
+ this.interval = property.interval;
+    this.left = true;
