--- a/index.html
+++ b/index.html
@@ -60,3 +60,5 @@ this.progress = 0;
     this.animating = false;
  this.interval = property.interval;
     this.left = true;
+    this.duration = property.animDuration;
+    this.easing = property.easing;
