--- a/index.html
+++ b/index.html
@@ -62,3 +62,6 @@ this.progress = 0;
     this.left = true;
     this.duration = property.animDuration;
     this.easing = property.easing;
+this.images.appendChild(this.canvasBox);
+    this.canvasBox.classList.add("canvas");
+  }
