--- a/index.html
+++ b/index.html
@@ -65,3 +65,7 @@ this.progress = 0;
 this.images.appendChild(this.canvasBox);
     this.canvasBox.classList.add("canvas");
   }
+_createClass(DXslider, [{
+    key: "init",
+    value: function init() {
+      this.settingStyle();
