--- a/index.html
+++ b/index.html
@@ -82,3 +82,7 @@ this.left = false;
       this.preButton.addEventListener("touchend", function (e) {
         if (!this.animating) {
           this.left = false;
+ clearTimeout(this.timer);
+          this.slide();
+        }
+      }.bind(this), false);
