--- a/index.html
+++ b/index.html
@@ -86,3 +86,10 @@ this.left = false;
           this.slide();
         }
       }.bind(this), false);
+this.preButton.addEventListener("touchend", function (e) {
+        if (!this.animating) {
+          this.left = false;
+          clearTimeout(this.timer);
+          this.slide();
+        }
+      }.bind(this), false);
