--- a/index.html
+++ b/index.html
@@ -93,3 +93,10 @@ this.preButton.addEventListener("touchend", function (e) {
           this.slide();
         }
       }.bind(this), false);
+this.nextButton.addEventListener("click", function (e) {
+        if (!this.animating) {
+          this.left = true;
+          clearTimeout(this.timer);
+          this.slide();
+        }
+      }.bind(this), false);
