--- a/index.html
+++ b/index.html
@@ -108,3 +108,7 @@ this.nextButton.addEventListener("click", function (e) {
         }
       }.bind(this), false);
     }
+}, {
+    key: "settingStyle",
+    value: function settingStyle() {
+      this.imagesWidth = this.images.offsetWidth;
