--- a/index.html
+++ b/index.html
@@ -112,3 +112,6 @@ this.nextButton.addEventListener("click", function (e) {
     key: "settingStyle",
     value: function settingStyle() {
       this.imagesWidth = this.images.offsetWidth;
+  this.width = this.lightenImages[0].width;
+      this.height = this.lightenImages[0].height;
+      this.dpi = this.width / this.imagesWidth;
