--- a/index.html
+++ b/index.html
@@ -115,3 +115,9 @@ this.nextButton.addEventListener("click", function (e) {
   this.width = this.lightenImages[0].width;
       this.height = this.lightenImages[0].height;
       this.dpi = this.width / this.imagesWidth;
+ this.images.style.height = this.canvasBox.style.height = this.imagesWidth * this.height / this.width + "px";
+
+      this.preButton.classList.add("after-loading");
+      this.nextButton.classList.add("after-loading");
+    }
+  }, {
