--- a/index.html
+++ b/index.html
@@ -121,3 +121,6 @@ this.nextButton.addEventListener("click", function (e) {
       this.nextButton.classList.add("after-loading");
     }
   }, {
+ key: "settingCanvas",
+    value: function settingCanvas() {
+      var canvas, context, normal, lighten, n;
