--- a/index.html
+++ b/index.html
@@ -179,3 +179,7 @@ this.left = true;
       }
     }
   }, {
+key: "render",
+    value: function render(progress, position) {
+      for (var i = 0, len = this.canvasArray.length; i < len; i++) {
+        var canvas = this.canvasArray[i].canvas;
