--- a/index.html
+++ b/index.html
@@ -189,3 +189,8 @@ key: "render",
         canvas.style.transform = "translate(" + (progress * position - (len / 2 - i) * this.imagesWidth) + "px, 0)";
   context.globalCompositeOperation = "source-over";
         context.drawImage(this.canvasArray[i].normal, 0, 0, this.width, this.height);
+context.globalCompositeOperation = "lighten";
+        context.drawImage(this.canvasArray[i].lighten, ((len / 2 - i) * this.imagesWidth - progress * position) * this.dpi * this.paraEffect, 0, this.width, this.height);
+      }
+    }
+  }]);
