--- a/index.html
+++ b/index.html
@@ -198,3 +198,6 @@ context.globalCompositeOperation = "lighten";
 }();
 //easing
 //prepare only easingInOutQuad
+function easingInOutQuad(t) {
+  return t < 0.5 ? 2 * t * t : -1 + (4 - 2 * t) * t;
+}
