--- a/index.html
+++ b/index.html
@@ -201,3 +201,6 @@ context.globalCompositeOperation = "lighten";
 function easingInOutQuad(t) {
   return t < 0.5 ? 2 * t * t : -1 + (4 - 2 * t) * t;
 }
+</script>
+ </body>
+ </html>
